<resources>
    <string name="app_name">ma_androidapp</string>
    <string name="mainImgContentDesc">MEDIAAAAA ACTIONS</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtnText">Register</string>
    <string name="loginTextHint">Login</string>
    <string name="passwordInputHint">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="username">Username</string>
    <string name="title_activity_upload_page">UploadPage</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="upload_image_btn">Choose image</string>
    <string name="uploadAddTag">Add tag</string>
    <string name="add_tag">Add tag</string>
    <string name="price_text">price :</string>
    <string name="post_text">Post</string>
    <string name="pwdconf">passwordConf</string>
    <string name="pwd">password</string>
    <string name="usr">username</string>
    <string name="mail_s">email</string>
    <string name="emptyFieldError">Please fill all the fields</string>
    <string name="inpError">Input Error</string>
    <string name="uploadOK">Image uploaded</string>
    <string name="dashErr">Error loading dashboard</string>
    <string name="siteURL">http://dev.media-actions.eu</string>
    <string name="imagedisplay">ImageDisplay</string>
    <string name="imagedata">ImageData</string>
    <string name="sheh">sheh</string>
    <string name="buyBtn">Buy</string>
    <string name="backBtn">Back</string>
</resources>
