<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mediaactions.ma_androidapp.UploadActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/transparent" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="uploadAction"
        android:text="@string/upload_image_btn"
        app:layout_constraintBottom_toTopOf="@+id/addTagText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addTagText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tagList"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:onClick="addTag"
        android:text="@string/add_tag"
        app:layout_constraintBaseline_toBaselineOf="@+id/addTagText"
        app:layout_constraintStart_toEndOf="@+id/addTagText" />

    <co.lujun.androidtagview.TagContainerLayout
        android:id="@+id/tagList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:padding="10dp"
        app:container_background_color="#00000000"
        app:container_border_color="#00000000"
        app:container_enable_drag="false"
        app:horizontal_interval="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/priceText"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:tag_background_color="#c9020c"
        app:tag_clickable="true"
        app:tag_text_color="#000000"
        app:tag_theme="none"
        app:vertical_interval="10dp" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="72dp" 
        android:layout_height="0dp"
        android:layout_marginEnd="39dp"
        android:text="@string/price_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/editPrice"
        app:layout_constraintEnd_toEndOf="@+id/addTagText"
        app:layout_constraintTop_toBottomOf="@+id/tagList" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="@+id/postButton"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/tagList" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/post_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/priceText"
        app:layout_constraintStart_toEndOf="@+id/priceText" />

</android.support.constraint.ConstraintLayout>
