<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mediaactions.ma_androidapp.Activities.ViewActivity">

    <ImageView
        android:id="@+id/imageDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:contentDescription="@string/sheh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_sys_headset" />

    <TextView
        android:id="@+id/titleDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/descDisp"
        app:layout_constraintStart_toStartOf="@+id/descDisp" />

    <TextView
        android:id="@+id/descDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="15dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        app:layout_constraintStart_toStartOf="@+id/btnBuy" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="26dp"
        android:text="@string/buyBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/priceView"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/priceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuy" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backBuyBtnClick"
        android:layout_marginTop="12dp"
        android:text="@string/backBtn"
        app:layout_constraintStart_toStartOf="@+id/btnBuy"
        app:layout_constraintTop_toBottomOf="@+id/btnBuy" />

</android.support.constraint.ConstraintLayout>
